NamespaceIsolation/appspace-isolate.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: appspace
  name: appspace-isolate
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
