NamespaceIsolation/newspace-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: newspace-deny-all
  namespace: newspace
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
