NamespaceIsolation/newspace-isolate.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: newspace
  name: newspace-isolate
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - podSelector: {}
